# blog

./: .Cargo.toml  .travis.yml  README.md  config.toml
backend/: Cargo.toml  Makefile.toml
backend/src/: main.rs  page_gen.rs
backend/templates/: index.html
content/blog/: function_traits.md
frontend/: Cargo.toml  LICENSE_MIT
frontend/src/: lib.rs
frontend/tests/: web.rs
frontend/www/: index.html  index.js  package-lock.json  package.json
public/: search_index.en.js
