[package]
name = "frontend"
version = "0.1.0"
authors = ["Ben <benphawke@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
log = "0.4.8"
cfg-if = "0.1.10"
js-sys = "0.3.37"

[dependencies.console_log]
version = "0.2"
features = ["color"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4.10"

[profile.release]
opt-level = "z"
